src/objects/Functionality__c.object
<CustomObject>
    <description>Pforce</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <inlineHelpText>These are a set of statements, each with a clear pass/fail result, that specify functional and non-functional requirements to determine when a functionality is completed and working as expected.</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <label>Blocked Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Overview of what requirements the functionality is going to address</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mobile_Ready_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile-Ready Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_UX_Status__c</fullName>
        <inlineHelpText>Note: All functionalities should be mobile ready. There are some that do not req a separate mobile UX design, but they still need to be mobile ready (i.e., responsive design is still req). This field is to track fun. needing a separate UX design</inlineHelpText>
        <label>Mobile UX Status</label>
        <picklist>
            <picklistValues>
                <fullName>N/A (No UI Required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile UX Design Not Req (Use Desktop UX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile UX Design Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile UX Design Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile UX Implementation Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Total_Actual_Hours__c</fullName>
        <label>Total Actual Hours</label>
        <summarizedField>PF_Tasks__c.PF_Actual_Hours__c</summarizedField>
        <summaryForeignKey>PF_Tasks__c.Functionality__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PF_Total_Estimated_Hours__c</fullName>
        <label>Total Estimated Hours</label>
        <summarizedField>PF_Tasks__c.PF_Estimate_Hours__c</summarizedField>
        <summaryForeignKey>PF_Tasks__c.Functionality__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Questions_Comments__c</fullName>
        <label>Questions/Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Description__c</fullName>
        <inlineHelpText>Description of the end solution created to address the business requirements</inlineHelpText>
        <label>Solution Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out-Of-Scope</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps__c</fullName>
        <inlineHelpText>Include any prerequisite steps, key pointers, updates per iteration conversations, recommendations for approach here.

Please Strike-through anything that is no longer required in this field.</inlineHelpText>
        <label>Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pure Configuration</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Workstream</label>
        <referenceTo>PF_Sprints__c</referenceTo>
        <relationshipName>Technical_Functionalities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Functionality</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Workstream__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Steps__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Apex</fullName>
        <columns>Workstream__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Mobile_Ready_Required__c</columns>
        <columns>Mobile_UX_Status__c</columns>
        <columns>Steps__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Apex Development</value>
        </filters>
        <label>All_Apex</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Complete</fullName>
        <columns>Workstream__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Steps__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>All - Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Specs</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Status__c</columns>
        <columns>Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>spec</value>
        </filters>
        <label>All (exlcuding specs)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_in_dev_complete_or_blocked</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>Workstream__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Status__c</columns>
        <columns>Steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Blocked</value>
        </filters>
        <label>All in dev,complete or blocked</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Development</fullName>
        <columns>Workstream__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Steps__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development</value>
        </filters>
        <label>In Development</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Functionality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functionalities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Blocked_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Blocked&quot;), ISBLANK( Blocked_Reason__c ) 
)</errorConditionFormula>
        <errorDisplayField>Blocked_Reason__c</errorDisplayField>
        <errorMessage>Please enter a Blocked Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solution_Description_Required</fullName>
        <active>true</active>
        <description>Solution Description required in order to Complete</description>
        <errorConditionFormula>ISPICKVAL(Status__c , &quot;Complete&quot;)  &amp;&amp;  Solution_Description__c =null</errorConditionFormula>
        <errorMessage>Solution Description required in order to mark functionality as Complete</errorMessage>
    </validationRules>
</CustomObject>